--- a/public/html/compiler.html
+++ b/public/html/compiler.html
@@ -14,7 +14,7 @@
             <h2>Type Your Code</h2>
             <div>
                 <select id="language" name="language">
-                    <!-- <option value="python">Python</option> -->
+                    <option value="python">Python</option>
                     <option value="javascript">JavaScript</option>
                     <option value="c">C</option>
                     <option value="cpp" selected>CPP</option>
@@ -36,5 +36,6 @@
     </div>
 
     <script src="/script/compilerScript.js"></script>
+    
 </body>
 </html>
